@@ -1,5 +1,8 @@
 IMOD History
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+2/11/15: Added option to Newstack to process some or all input files in
+reverse order.
+
 2/11/15: Added options to Densmatch to scale to a given mean/SD, change the
 mode for a new output file, and assess the existing density using all pixels
 instead of a sample of pixels.
